--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,11 @@ android {
         multiDexEnabled true
     }
 
-    signingConfigs {
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
+
+/*    signingConfigs {
         debug {
             storeFile file('tudouni.jks')
             storePassword "tudouni"
@@ -28,7 +32,7 @@ android {
             keyPassword "tudouni"
         }
 
-    }
+    }*/
     buildTypes {
         release {
             shrinkResources false
@@ -36,14 +40,14 @@ android {
             jniDebuggable false
             minifyEnabled false
 
-            signingConfig signingConfigs.release
+            /*signingConfig signingConfigs.release*/
         }
 
         debug {
             shrinkResources false
             jniDebuggable false
             minifyEnabled false
-            signingConfig signingConfigs.release
+            /*signingConfig signingConfigs.release*/
         }
 
         uat {
@@ -92,6 +96,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:25.2.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
 
+    compile 'com.trello:rxlifecycle:0.6.1'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -101,6 +106,7 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile  'com.android.support:recyclerview-v7:25.2.0'
 
     //友盟SDK集成
     compile 'com.umeng.sdk:common:latest.integration'
