--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme">
 
+        <!--=========================APP中的 Activity Start=========================-->
         <activity
             android:name=".activity.SplashActivity"
             android:screenOrientation="portrait">
@@ -55,10 +56,13 @@
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
+
+        <!--=========================APP中的 Activity End=========================-->
+        <!--=========================友盟集成 Start=========================-->
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="58cbfa63b27b0a79fd00177d" />
+            android:value="5adaa9d5f43e4860300001e9" />
         <meta-data
             android:name="UMENG_CHANNEL"
             android:value="${UMENG_CHANNEL_VALUE}" />
@@ -66,6 +70,35 @@
             android:name="com.amap.api.v2.apikey"
             android:value="ddd6f5b45c23b654811f3837d4454854" />
 
+        <activity
+            android:name=".wxapi.WXEntryActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <activity
+            android:name="com.tencent.tauth.AuthActivity"
+            android:launchMode="singleTask"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="tencent100424468" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.tencent.connect.common.AssistActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            tools:replace="android:configChanges" />
+
+        <!--=========================友盟集成 End=========================-->
+
+        <!--===============极光推送 Start=========================-->
         <!-- Required SDK 核心功能-->
         <!-- 可配置android:process参数将PushService放在其他进程中 -->
         <service
@@ -188,6 +221,7 @@
                 <category android:name="com.tudouni.makemoney" />
             </intent-filter>
         </receiver>
+        <!--===============极光推送 End=========================-->
     </application>
 
 </manifest>
