--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
 
     repositories {
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -17,7 +18,6 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
-        google()
     }
 }
 
