--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         mavenCentral()
         jcenter()
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         mavenCentral()
         jcenter()
+        google()
     }
 }
 
