--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,7 @@ dependencies {
     //RecyclerView
     compile 'com.github.jdsjlzx:LRecyclerView:1.5.0'
 
+    compile 'org.simple:androideventbus:1.0.5.1'
     //极光推送
     // 此处以JPush 3.1.1 版本为例。
     compile 'cn.jiguang.sdk:jpush:3.1.1'
