--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,6 +139,7 @@ dependencies {
     compile 'cn.jiguang.sdk:jpush:3.1.1'
     // 此处以JCore 1.1.9 版本为例。
     compile 'cn.jiguang.sdk:jcore:1.1.9'
+    compile 'com.github.pinguo-zhouwei:MZBannerView:v2.0.1'
     compile project(path: ':QrCodeModel:lib-zxing')
     implementation files('libs/umeng-debug-1.0.0.jar')
     implementation files('libs/umeng-share-core-6.9.1.jar')
