--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -258,6 +258,16 @@
             </intent-filter>
         </receiver>
         <!-- ===============极光推送 End========================= -->
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.tudouni.makemoney.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/rc_file_path" />
+        </provider>
         <activity android:name=".activity.InvitationDouFenActivity" />
         <activity android:name=".activity.BindingInvitationActivity" />
         <activity android:name=".activity.UserInfoActivity"></activity>
