--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     implementation 'com.android.support:design:25.3.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     compile 'com.trello:rxlifecycle:0.6.1'
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+//    compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.lzy.net:okgo:2.1.4'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'io.reactivex.rxjava2:rxjava:2.0.4'
@@ -126,7 +126,7 @@ dependencies {
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jaeger.statusbaruitl:library:1.3.6'
     //友盟SDK集成
@@ -138,8 +138,9 @@ dependencies {
     //极光推送
     // 此处以JPush 3.1.1 版本为例。
     compile 'cn.jiguang.sdk:jpush:3.1.1'
-    compile 'pub.devrel:easypermissions:0.1.9'
+    compile 'pub.devrel:easypermissions:0.2.1'
     compile 'com.github.lzyzsd:jsbridge:1.0.4'
+
     // 此处以JCore 1.1.9 版本为例。
     compile 'cn.jiguang.sdk:jcore:1.1.9'
     compile 'com.github.pinguo-zhouwei:MZBannerView:v2.0.1'
