--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,11 +64,11 @@ android {
         }
 
         debug {
-            zipAlignEnabled true
-            shrinkResources true
+//            zipAlignEnabled true
+//            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             jniDebuggable false
-            minifyEnabled true
+            minifyEnabled false
             signingConfig signingConfigs.release
         }
 
