--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,7 +138,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.jaeger.statusbaruitl:library:1.3.6'
     compile 'com.android.support:cardview-v7:25.0.1'
-    //友盟SDK集成
+    //友盟SDK集成com.bumptech.glide
     compile 'com.umeng.sdk:common:latest.integration'
     compile 'com.umeng.sdk:analytics:latest.integration'
     compile 'com.kevin:pulltorefresh:1.0.7'
