--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,16 +97,8 @@
             android:label="实名认证已认证"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.realname.RealnameActivity"
-            android:label="实名认证未认证"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".activity.realname.IdentificationActivity"
             android:label="实名认证人工认证"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".activity.realname.RealTelBandingActivity"
-            android:label="实名认证绑定手机号"
             android:screenOrientation="portrait" />
         <activity
             android:name=".activity.realname.RealnameActivity2"
@@ -123,6 +115,10 @@
         <activity
             android:name=".activity.withdrawmoney.IncomeActivity"
             android:label="提现记录界面"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SubmitFinishActivity"
+            android:label="操作完成界面"
             android:screenOrientation="portrait" />
 
         <!-- =========================APP中的 Activity End========================= -->
