--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,17 +60,6 @@
             android:name=".activity.MainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".activity.H5Activity"
-            android:label="H5页"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-                <action android:name="com.tudouni.action.H5Activity" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
 
         <activity
             android:name=".activity.SearchGoodActivity"
@@ -128,7 +117,19 @@
             android:label="登录"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/FullTheme" />
+            android:theme="@style/AnimationUpInDownOutTheme" />
+
+        <activity
+            android:name=".activity.H5Activity"
+            android:label="H5页"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="com.tudouni.action.H5Activity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activity.SettingActivity"
             android:label="设置"
@@ -329,9 +330,15 @@
         <activity android:name=".activity.BindingInvitationActivity" />
         <activity android:name=".activity.UserInfoActivity" />
         <activity android:name=".activity.MessageActivity"></activity>
-        <activity android:name=".activity.search.SearchActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.MyEarningsActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".activity.MySavingsActivity" android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.search.SearchActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.MyEarningsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.MySavingsActivity"
+            android:screenOrientation="portrait" />
 
         <!-- =========================支付宝 Start========================= -->
         <activity
@@ -339,15 +346,13 @@
             android:configChanges="orientation|keyboardHidden|navigation|screenSize"
             android:exported="false"
             android:screenOrientation="behind"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <activity
             android:name="com.alipay.sdk.app.H5AuthActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
             android:screenOrientation="behind"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
-        </activity>
+            android:windowSoftInputMode="adjustResize|stateHidden"></activity>
         <!-- =========================支付宝 End========================= -->
     </application>
 
